--- a/about.html
+++ b/about.html
@@ -51,34 +51,27 @@
 
 
 						<li>
-							<a href="services-list.html">O nama</a>
+							<a href="#">O nama</a>
 							<ul class="sub-menu">
-								<li><a href="about.html">O parku prirode</a></li>
+								<li><a href="about.html">O parku</a></li>
+								<li><a href="osobna.html">Osobna karta parka</a></li>
+							</ul>
+						</li>
+
+						<li>
+							<a href="turistickicentar.html">Turist info</a>
+							<ul class="sub-menu">
+							<li><a href="turistinfo.html">Kako doći?</a></li>
+							
+							</ul>
+						</li>
+
+						<li>
+							<a href="#">Šta vidjeti?</a>
+							<ul class="sub-menu">
+								<li><a href="masica.html">Jezero Mašica</a></li>
+								<li><a href="tajan.html">Planina Tajan</a></li>
 								
-							</ul>
-						</li>
-
-						<li>
-							<a href="news-grid.html">News</a>
-							<ul class="sub-menu">
-								<li><a href="news-grid.html">News Grid</a></li>
-								<li><a href="news-list.html">News List</a></li>
-								<li><a href="news-detail.html">News Detail</a></li>
-							</ul>
-						</li>
-
-						<li>
-							<a href="projects-grid.html">Projects</a>
-							<ul class="sub-menu">
-								<li><a href="projects-grid.html">Projects Grid</a></li>
-								<li>
-									<a href="#">Projects Detail</a>
-
-									<ul class="sub-menu">
-										<li><a href="projects-detail-01.html">Projects Detail v1</a></li>
-										<li><a href="projects-detail-02.html">Projects Detail v2</a></li>
-									</ul>
-								</li>
 							</ul>
 						</li>
 
@@ -99,6 +92,7 @@
 			</div>
 		</div>	
 	</nav>
+
 
 
 		<!-- Header Mobile -->
