--- a/turistinfo.html
+++ b/turistinfo.html
@@ -59,7 +59,7 @@
 						</li>
 
 						<li>
-							<a href="#">Turist info</a>
+							<a href="turistickicentar.html">Turist info</a>
 							<ul class="sub-menu">
 							<li><a href="turistinfo.html">Kako doći?</a></li>
 								
